<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_black"
    android:orientation="vertical"
    tools:context="com.rain.zhihui_community.ui.activity.settting.PasswordActivity">

    <include layout="@layout/title_item_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp15"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp15">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/worn_setting_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp19" />

            <EditText
                android:id="@+id/et_worn_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/edit_worn_password"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/login_select_no"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/iv_worn_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/visible_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp15">

            <TextView
                android:layout_width="@dimen/dp100"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp19" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/edit_new_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/login_select_no"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/iv_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/gone_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp15">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/complete_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp19" />

            <EditText
                android:id="@+id/et_complete_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/complete_new_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/login_select_no"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/iv_complete_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/gone_password" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp70"
        android:layout_marginRight="@dimen/dp70"
        android:layout_marginTop="@dimen/dp50"
        android:background="@drawable/button_login_select_no"
        android:enabled="false"
        android:gravity="center"
        android:text="确定"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/login_select_no"
        android:textSize="@dimen/sp16" />
</LinearLayout>
