<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_black"
    android:orientation="vertical"
    tools:context="com.rain.zhihui_community.ui.activity.information.InformationActivity">

    <include layout="@layout/title_item_layout" />

    <LinearLayout
        android:id="@+id/ll_information_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/my_information_photo"
            android:textColor="@color/text_color"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/iv_information_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/iv_my_photo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_information_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/my_name_room"
            android:textColor="@color/text_color"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_information_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:textColor="@color/login_select_no"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_information_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/my_information_sex"
            android:textColor="@color/text_color"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_information_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:text="男"
            android:textColor="@color/login_select_no"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/right" />
    </LinearLayout>
</LinearLayout>
